# HAVAS

api_faturas/: .env.exemple  file.xml  main.py  mapping_xml.json  requirements.txt
api_faturas/auth/: auth.py
api_faturas/config/: settings.py
api_faturas/database/: database.py
api_faturas/messages/: invoices.py  messages.py  processed.py  receive.py
api_faturas/schemas/json/: ND-AccountingDocumentsComponents-1.1.json  ND-BaseComponents-1.1.json  ND-BaseMessageComponents-1.1.json  ND-BasicDataTypes-1.1.json  ND-ComercialDocumentsComponents-1.1.json  ND-Consumer-1.1.json  ND-CreditNote-1.1.json  ND-DebitNote-1.1.json  ND-DespatchAdvice-1.1.json  ND-DocumentStatus-1.1.json  ND-Invoice-1.1.json  (+16 more)
api_faturas/services/: authentication.py  file_handler.py  message_processor.py  validation_manager.py
api_faturas/utils/: conversions.py  handle_emails.py  handle_files.py  handle_xml.py  validations.py
api_messages/: .gitignore  mkdocs.yml  pyproject.toml
api_messages/api_messages/: cli.py  main.py
api_messages/api_messages/config/: settings.py
api_messages/api_messages/database/: database.py
api_messages/api_messages/messages/: messages.py  processed.py  receive.py
api_messages/api_messages/services/: file_handler.py  message_processor.py
api_messages/api_messages/utils/: comparisons.py  conversions.py  handle_files.py
api_messages/api_messages/utils/xml/: handle_xml.py  line_items_tag.py  qr_code_tag.py  serialize_tag.py  tag_factory.py
api_messages/docs/: about.md  ambiente.md  index.md  integracao.md
api_messages/docs/stylesheets/: extra.css
(+41 files in other folders)
