[tool.poetry]
name = "api-messages"
version = "0.1.0"
description = "Buscar as mensagens processadas pela Saphety"
authors = ["José Roberto Ferreira <joseroberto.ferreira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pyodbc = "^5.2.0"
tzdata = "^2024.2"
xmltodict = "^0.14.2"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.44"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.12.2"
mkdocs-macros-plugin = "^1.3.7"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
docs = "mkdocs serve"


[tool.ruff]
line-length = 90
extend-exclude = ['migrations']


[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.ruff.format]
preview = true
quote-style = 'single'